--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 <title>Expense Control</title>
 <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="login">
 
 <div class="container">
 
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
